Add Paper-server