@@ -7,17 +7,20 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import net.minecraft.core.RegistryAccess;
+import com.mojang.logging.LogUtils;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.resources.ResourceKey;
+import net.minecraft.util.ProblemReporter;
 import net.minecraft.util.random.Weighted;
 import net.minecraft.util.random.WeightedList;
+import net.minecraft.world.entity.Entity;
 import net.minecraft.world.level.SpawnData;
 import net.minecraft.world.level.block.entity.TrialSpawnerBlockEntity;
-import net.minecraft.world.level.block.entity.trialspawner.TrialSpawner;
 import net.minecraft.world.level.block.entity.trialspawner.TrialSpawnerConfig;
 import net.minecraft.world.level.block.entity.trialspawner.TrialSpawnerStateData;
+import net.minecraft.world.level.storage.TagValueInput;
+import net.minecraft.world.level.storage.TagValueOutput;
 import org.bukkit.block.spawner.SpawnRule;
 import org.bukkit.block.spawner.SpawnerEntry;
 import org.bukkit.craftbukkit.CraftLootTable;
@@ -27,10 +30,13 @@ import org.bukkit.entity.EntitySnapshot;
 import org.bukkit.entity.EntityType;
 import org.bukkit.loot.LootTable;
 import org.bukkit.spawner.TrialSpawnerConfiguration;
+import org.slf4j.Logger;
 
 public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration {
+
+    private static final Logger LOGGER = LogUtils.getLogger();
+
     private final TrialSpawnerBlockEntity snapshot;
-    private final RegistryAccess registry;
 
     private int spawnRange;
     private float totalMobs;
@@ -42,12 +48,9 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
     private WeightedList<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> lootTablesToEject;
     private ResourceKey<net.minecraft.world.level.storage.loot.LootTable> itemsToDropWhenOminous;
 
-    public CraftTrialSpawnerConfiguration(TrialSpawnerBlockEntity snapshot, RegistryAccess registry) {
+    public CraftTrialSpawnerConfiguration(TrialSpawnerConfig minecraft, TrialSpawnerBlockEntity snapshot) {
         this.snapshot = snapshot;
-        this.registry = registry;
-    }
 
-    void loadFromConfig(TrialSpawnerConfig minecraft) {
         this.spawnRange = minecraft.spawnRange();
         this.totalMobs = minecraft.totalMobs();
         this.simultaneousMobs = minecraft.simultaneousMobs();
@@ -61,84 +64,93 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
     @Override
     public EntityType getSpawnedType() {
-        if (spawnPotentialsDefinition.isEmpty()) {
+        if (this.spawnPotentialsDefinition.isEmpty()) {
             return null;
         }
 
-        Optional<net.minecraft.world.entity.EntityType<?>> type = spawnPotentialsDefinition.unwrap().get(0).value().getEntityToSpawn().read("id", net.minecraft.world.entity.EntityType.CODEC);
-        return type.map(CraftEntityType::minecraftToBukkit).orElse(null);
+        try (final ProblemReporter.ScopedCollector problemReporter = new ProblemReporter.ScopedCollector(
+            () -> "TrialSpawnerConfiguration@" + snapshot.getBlockPos().toShortString(), LOGGER
+        )) {
+            Optional<net.minecraft.world.entity.EntityType<?>> type = net.minecraft.world.entity.EntityType.by(
+                TagValueInput.createGlobal(
+                    problemReporter,
+                    this.spawnPotentialsDefinition.unwrap().getFirst().value().getEntityToSpawn()
+                )
+            );
+            return type.map(CraftEntityType::minecraftToBukkit).orElse(null);
+        }
     }
 
     @Override
     public void setSpawnedType(EntityType entityType) {
         if (entityType == null) {
-            getTrialData().nextSpawnData = Optional.empty();
-            spawnPotentialsDefinition = WeightedList.of(); // need clear the spawnPotentials to avoid nextSpawnData being replaced later
+            this.getTrialData().nextSpawnData = Optional.empty();
+            this.spawnPotentialsDefinition = WeightedList.of(); // need clear the spawnPotentials to avoid nextSpawnData being replaced later
             return;
         }
         Preconditions.checkArgument(entityType != EntityType.UNKNOWN, "Can't spawn EntityType %s from mob spawners!", entityType);
 
         SpawnData data = new SpawnData();
-        data.getEntityToSpawn().putString("id", BuiltInRegistries.ENTITY_TYPE.getKey(CraftEntityType.bukkitToMinecraft(entityType)).toString());
-        getTrialData().nextSpawnData = Optional.of(data);
-        spawnPotentialsDefinition = WeightedList.of(data);
+        data.getEntityToSpawn().putString(Entity.TAG_ID, BuiltInRegistries.ENTITY_TYPE.getKey(CraftEntityType.bukkitToMinecraft(entityType)).toString());
+        this.getTrialData().nextSpawnData = Optional.of(data);
+        this.spawnPotentialsDefinition = WeightedList.of(data);
     }
 
     @Override
     public float getBaseSpawnsBeforeCooldown() {
-        return totalMobs;
+        return this.totalMobs;
     }
 
     @Override
     public void setBaseSpawnsBeforeCooldown(float amount) {
-        totalMobs = amount;
+        this.totalMobs = amount;
     }
 
     @Override
     public float getBaseSimultaneousEntities() {
-        return simultaneousMobs;
+        return this.simultaneousMobs;
     }
 
     @Override
     public void setBaseSimultaneousEntities(float amount) {
-        simultaneousMobs = amount;
+        this.simultaneousMobs = amount;
     }
 
     @Override
     public float getAdditionalSpawnsBeforeCooldown() {
-        return totalMobsAddedPerPlayer;
+        return this.totalMobsAddedPerPlayer;
     }
 
     @Override
     public void setAdditionalSpawnsBeforeCooldown(float amount) {
-        totalMobsAddedPerPlayer = amount;
+        this.totalMobsAddedPerPlayer = amount;
     }
 
     @Override
     public float getAdditionalSimultaneousEntities() {
-        return simultaneousMobsAddedPerPlayer;
+        return this.simultaneousMobsAddedPerPlayer;
     }
 
     @Override
     public void setAdditionalSimultaneousEntities(float amount) {
-        simultaneousMobsAddedPerPlayer = amount;
+        this.simultaneousMobsAddedPerPlayer = amount;
     }
 
     @Override
     public int getDelay() {
-      return ticksBetweenSpawn;
+        return this.ticksBetweenSpawn;
     }
 
     @Override
     public void setDelay(int delay) {
         Preconditions.checkArgument(delay >= 0, "Delay cannot be less than 0");
 
-        ticksBetweenSpawn = delay;
+        this.ticksBetweenSpawn = delay;
     }
 
     @Override
     public int getSpawnRange() {
-        return spawnRange;
+        return this.spawnRange;
     }
 
     @Override
@@ -148,7 +160,7 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
     @Override
     public EntitySnapshot getSpawnedEntity() {
-        WeightedList<SpawnData> potentials = spawnPotentialsDefinition;
+        WeightedList<SpawnData> potentials = this.spawnPotentialsDefinition;
         if (potentials.isEmpty()) {
             return null;
         }
@@ -158,33 +170,33 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
     @Override
     public void setSpawnedEntity(EntitySnapshot snapshot) {
-        setSpawnedEntity(snapshot, null, null);
+        this.setSpawnedEntity(snapshot, null, null);
     }
 
     @Override
     public void setSpawnedEntity(SpawnerEntry spawnerEntry) {
         Preconditions.checkArgument(spawnerEntry != null, "Entry cannot be null");
 
-        setSpawnedEntity(spawnerEntry.getSnapshot(), spawnerEntry.getSpawnRule(), spawnerEntry.getEquipment());
+        this.setSpawnedEntity(spawnerEntry.getSnapshot(), spawnerEntry.getSpawnRule(), spawnerEntry.getEquipment());
     }
 
     private void setSpawnedEntity(EntitySnapshot snapshot, SpawnRule spawnRule, SpawnerEntry.Equipment equipment) {
         if (snapshot == null) {
-            getTrialData().nextSpawnData = Optional.empty();
-            spawnPotentialsDefinition = WeightedList.of(); // need clear the spawnPotentials to avoid nextSpawnData being replaced later
+            this.getTrialData().nextSpawnData = Optional.empty();
+            this.spawnPotentialsDefinition = WeightedList.of(); // need clear the spawnPotentials to avoid nextSpawnData being replaced later
             return;
         }
 
         CompoundTag compoundTag = ((CraftEntitySnapshot) snapshot).getData();
         SpawnData data = new SpawnData(compoundTag, Optional.ofNullable(CraftCreatureSpawner.toMinecraftRule(spawnRule)), CraftCreatureSpawner.getEquipment(equipment));
 
-        getTrialData().nextSpawnData = Optional.of(data);
-        spawnPotentialsDefinition = WeightedList.of(data);
+        this.getTrialData().nextSpawnData = Optional.of(data);
+        this.spawnPotentialsDefinition = WeightedList.of(data);
     }
 
     @Override
     public void addPotentialSpawn(EntitySnapshot snapshot, int weight, SpawnRule spawnRule) {
-        addPotentialSpawn(snapshot, weight, spawnRule, null);
+        this.addPotentialSpawn(snapshot, weight, spawnRule, null);
     }
 
     private void addPotentialSpawn(EntitySnapshot snapshot, int weight, SpawnRule spawnRule, SpawnerEntry.Equipment equipment) {
@@ -192,17 +204,17 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
         CompoundTag compoundTag = ((CraftEntitySnapshot) snapshot).getData();
 
-        WeightedList.Builder<SpawnData> builder = WeightedList.builder(); // PAIL rename Builder
-        spawnPotentialsDefinition.unwrap().forEach(entry -> builder.add(entry.value(), entry.weight()));
+        WeightedList.Builder<SpawnData> builder = WeightedList.builder();
+        this.spawnPotentialsDefinition.unwrap().forEach(entry -> builder.add(entry.value(), entry.weight()));
         builder.add(new SpawnData(compoundTag, Optional.ofNullable(CraftCreatureSpawner.toMinecraftRule(spawnRule)), CraftCreatureSpawner.getEquipment(equipment)), weight);
-        spawnPotentialsDefinition = builder.build();
+        this.spawnPotentialsDefinition = builder.build();
     }
 
     @Override
     public void addPotentialSpawn(SpawnerEntry spawnerEntry) {
         Preconditions.checkArgument(spawnerEntry != null, "Entry cannot be null");
 
-        addPotentialSpawn(spawnerEntry.getSnapshot(), spawnerEntry.getSpawnWeight(), spawnerEntry.getSpawnRule(), spawnerEntry.getEquipment());
+        this.addPotentialSpawn(spawnerEntry.getSnapshot(), spawnerEntry.getSpawnWeight(), spawnerEntry.getSpawnRule(), spawnerEntry.getEquipment());
     }
 
     @Override
@@ -214,14 +226,14 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
             CompoundTag compoundTag = ((CraftEntitySnapshot) spawnerEntry.getSnapshot()).getData();
             builder.add(new SpawnData(compoundTag, Optional.ofNullable(CraftCreatureSpawner.toMinecraftRule(spawnerEntry.getSpawnRule())), CraftCreatureSpawner.getEquipment(spawnerEntry.getEquipment())), spawnerEntry.getSpawnWeight());
         }
-        spawnPotentialsDefinition = builder.build();
+        this.spawnPotentialsDefinition = builder.build();
     }
 
     @Override
     public List<SpawnerEntry> getPotentialSpawns() {
         List<SpawnerEntry> entries = new ArrayList<>();
 
-        for (Weighted<SpawnData> entry : spawnPotentialsDefinition.unwrap()) {
+        for (Weighted<SpawnData> entry : this.spawnPotentialsDefinition.unwrap()) {
             CraftEntitySnapshot snapshot = CraftEntitySnapshot.create(entry.value().getEntityToSpawn());
 
             if (snapshot != null) {
@@ -236,7 +248,7 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
     public Map<LootTable, Integer> getPossibleRewards() {
         Map<LootTable, Integer> tables = new HashMap<>();
 
-        for (Weighted<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> entry : lootTablesToEject.unwrap()) {
+        for (Weighted<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> entry : this.lootTablesToEject.unwrap()) {
             LootTable table = CraftLootTable.minecraftToBukkit(entry.value());
             if (table != null) {
                 tables.put(table, entry.weight());
@@ -252,30 +264,30 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
         Preconditions.checkArgument(weight >= 1, "Weight must be at least 1");
 
         WeightedList.Builder<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> builder = WeightedList.builder();
-        lootTablesToEject.unwrap().forEach(entry -> builder.add(entry.value(), entry.weight()));
+        this.lootTablesToEject.unwrap().forEach(entry -> builder.add(entry.value(), entry.weight()));
         builder.add(CraftLootTable.bukkitToMinecraft(table), weight);
-        lootTablesToEject = builder.build();
+        this.lootTablesToEject = builder.build();
     }
 
     @Override
     public void removePossibleReward(LootTable table) {
         Preconditions.checkArgument(table != null, "Key cannot be null");
 
-        ResourceKey<net.minecraft.world.level.storage.loot.LootTable> minecraftKey = CraftLootTable.bukkitToMinecraft(table);
+        ResourceKey<net.minecraft.world.level.storage.loot.LootTable> key = CraftLootTable.bukkitToMinecraft(table);
         WeightedList.Builder<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> builder = WeightedList.builder();
 
-        for (Weighted<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> entry : lootTablesToEject.unwrap()) {
-            if (!entry.value().equals(minecraftKey)) {
+        for (Weighted<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> entry : this.lootTablesToEject.unwrap()) {
+            if (!entry.value().equals(key)) {
                 builder.add(entry.value(), entry.weight());
             }
         }
-        lootTablesToEject = builder.build();
+        this.lootTablesToEject = builder.build();
     }
 
     @Override
     public void setPossibleRewards(Map<LootTable, Integer> rewards) {
         if (rewards == null || rewards.isEmpty()) {
-            lootTablesToEject = WeightedList.of();
+            this.lootTablesToEject = WeightedList.of();
             return;
         }
 
@@ -287,25 +299,24 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
             builder.add(CraftLootTable.bukkitToMinecraft(table), weight);
         });
 
-        lootTablesToEject = builder.build();
+        this.lootTablesToEject = builder.build();
     }
 
     @Override
     public int getRequiredPlayerRange() {
-        return snapshot.trialSpawner.getRequiredPlayerRange();
+        return this.snapshot.getTrialSpawner().getRequiredPlayerRange();
     }
 
     @Override
     public void setRequiredPlayerRange(int requiredPlayerRange) {
-        TrialSpawner.FullConfig oldConfig = snapshot.trialSpawner.config;
-        snapshot.trialSpawner.config = new TrialSpawner.FullConfig(oldConfig.normal(), oldConfig.ominous(), oldConfig.targetCooldownLength(), requiredPlayerRange);
+        this.snapshot.getTrialSpawner().config = this.snapshot.getTrialSpawner().config.overrideRequiredPlayerRange(requiredPlayerRange);
     }
 
     private TrialSpawnerStateData getTrialData() {
-        return snapshot.getTrialSpawner().getStateData();
+        return this.snapshot.getTrialSpawner().getStateData();
     }
 
     protected TrialSpawnerConfig toMinecraft() {
-        return new TrialSpawnerConfig(spawnRange, totalMobs, simultaneousMobs, totalMobsAddedPerPlayer, simultaneousMobsAddedPerPlayer, ticksBetweenSpawn, spawnPotentialsDefinition, lootTablesToEject, itemsToDropWhenOminous);
+        return new TrialSpawnerConfig(this.spawnRange, this.totalMobs, this.simultaneousMobs, this.totalMobsAddedPerPlayer, this.simultaneousMobsAddedPerPlayer, this.ticksBetweenSpawn, this.spawnPotentialsDefinition, this.lootTablesToEject, this.itemsToDropWhenOminous);
     }
 }
