@@ -2,7 +2,6 @@ package org.bukkit.craftbukkit.inventory;
 
 import com.google.common.base.Function;
 import com.google.common.collect.Lists;
-import java.util.Collections;
 import java.util.List;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.trading.MerchantOffers;
@@ -16,7 +15,7 @@ public interface CraftMerchant extends Merchant {
 
     @Override
     default List<MerchantRecipe> getRecipes() {
-        return Collections.unmodifiableList(Lists.transform(getMerchant().getOffers(), new Function<net.minecraft.world.item.trading.MerchantOffer, MerchantRecipe>() {
+        return List.copyOf(Lists.transform(this.getMerchant().getOffers(), new Function<net.minecraft.world.item.trading.MerchantOffer, MerchantRecipe>() { // Paper - javadoc says 'an immutable list of trades' - not 'an unmodifiable view of a list of trades'. fixes issue with setRecipes(getRecipes())
             @Override
             public MerchantRecipe apply(net.minecraft.world.item.trading.MerchantOffer recipe) {
                 return recipe.asBukkit();
@@ -26,7 +25,7 @@ public interface CraftMerchant extends Merchant {
 
     @Override
     default void setRecipes(List<MerchantRecipe> recipes) {
-        MerchantOffers recipesList = getMerchant().getOffers();
+        MerchantOffers recipesList = this.getMerchant().getOffers();
         recipesList.clear();
         for (MerchantRecipe recipe : recipes) {
             recipesList.add(CraftMerchantRecipe.fromBukkit(recipe).toMinecraft());
@@ -35,27 +34,27 @@ public interface CraftMerchant extends Merchant {
 
     @Override
     default MerchantRecipe getRecipe(int i) {
-        return getMerchant().getOffers().get(i).asBukkit();
+        return this.getMerchant().getOffers().get(i).asBukkit();
     }
 
     @Override
     default void setRecipe(int i, MerchantRecipe merchantRecipe) {
-        getMerchant().getOffers().set(i, CraftMerchantRecipe.fromBukkit(merchantRecipe).toMinecraft());
+        this.getMerchant().getOffers().set(i, CraftMerchantRecipe.fromBukkit(merchantRecipe).toMinecraft());
     }
 
     @Override
     default int getRecipeCount() {
-        return getMerchant().getOffers().size();
+        return this.getMerchant().getOffers().size();
     }
 
     @Override
     default boolean isTrading() {
-        return getTrader() != null;
+        return this.getTrader() != null;
     }
 
     @Override
     default HumanEntity getTrader() {
-        Player eh = getMerchant().getTradingPlayer();
+        Player eh = this.getMerchant().getTradingPlayer();
         return eh == null ? null : eh.getBukkitEntity();
     }
 }
